<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MedicalProcess</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="email_editText">Email</string>
    <string name="password_editText">Password</string>
    <string name="login_button">Log In</string>
    <string name="signUp_button">Sign Up</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="firstName_editText">First Name</string>
    <string name="lastName_editText">Last Name</string>
    <string name="fonction_editText">Fonction</string>
    <string name="entite_editText">Entite</string>
    <string name="refresh_button">Refresh</string>
    <string name="addNewPatient_button">Add New Patient</string>
    <string name="title_activity_secretary">SecretaryActivity</string>
    <string name="work_button">Work</string>
    <string name="addNewConsultation_button">Add New Consultation</string>
    <string name="getConsultationsList_button">Consultations</string>
    <string name="title_activity_add_new_patient">AddNewPatientActivity</string>
    <string name="createNewPatient_button">Create</string>
    <string name="patientAge_editText">Age</string>
    <string name="patientSexe_editText">Gender</string>
    <string name="title_activity_add_new_consultation">AddNewConsultation</string>
    <string name="patientId_editText">Patient ID</string>
    <string name="title_activity_show_consultations">ShowConsultationsActivity</string>

</resources>
